New user experience

--- a/apl/animations/christmas.html
+++ b/apl/animations/christmas.html
@@ -10,7 +10,7 @@
   <script src="/js/apl/apl.js"></script>
   <script src="/js/apl/animations/christmas.js" defer></script>
 
-  <script src="/js/load_header_footer.js"></script>
+  <script src="/js/script.js"></script>
   <script>
     (async () => {
       let nav = await fetch('/base/logic_games_nav.html');
@@ -28,7 +28,6 @@
     <div class="intro">
       <h1>A Christmas animation!</h1>
       <p>Enter an image made with characters, or just press animate!</p>
-      <p>But remember to don't use the snow symbol: '*'</p>
     </div>
 
     <div class="section">
