--- a/apl/animations/happy_new_year.html
+++ b/apl/animations/happy_new_year.html
@@ -10,7 +10,7 @@
   <script src="/js/apl/apl.js"></script>
   <script src="/js/apl/animations/happy_new_year.js" defer></script>
 
-  <script src="/js/load_header_footer.js"></script>
+  <script src="/js/script.js"></script>
   <script>
     (async () => {
       let nav = await fetch('/base/logic_games_nav.html');
