--- a/apl/animations/index.html
+++ b/apl/animations/index.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="/css/apl/animations/index.css">
 
-  <script src="/js/load_header_footer.js"></script>
+  <script src="/js/script.js"></script>
   <script>
     (async () => {
       let nav = await fetch('/base/logic_games_nav.html');
