--- a/apl/logic_games/hitori.html
+++ b/apl/logic_games/hitori.html
@@ -11,7 +11,7 @@
   <script src="/js/apl/logic_games/puzzle_utils.js" defer></script>
   <script src="/js/apl/logic_games/hitori.js" defer></script>
 
-  <script src="/js/load_header_footer.js"></script>
+  <script src="/js/script.js"></script>
   <script>
     (async () => {
       let nav = await fetch('/base/logic_games_nav.html');
@@ -55,6 +55,7 @@
         <table class="try__table"></table>
         <div class="try__btns">
           <button class="btns__verify">Verify</button>
+          <button class="btns__mode"></button>
         </div>
       </section>
     </div>
