--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/css/dyalog-apl.css">
   <link rel="stylesheet" href="/css/contact_me.css">
 
-  <script src="/js/load_header_footer.js"></script>
+  <script src="/js/script.js"></script>
   <script defer>
     // Reset animation
     setInterval(() => {
