--- a/apl/logic_games/index.html
+++ b/apl/logic_games/index.html
@@ -25,25 +25,165 @@
     <div class="cards">
       <a class="card" href="/apl/logic_games/tree.html">
         <h2>Tree</h2>
-        <img class="card__img" src="/img/logic_games/tree.png" alt="">
+        <div class="card__preview"></div>
       </a>
 
       <a class="card" href="/apl/logic_games/electric_charges.html">
         <h2>Electric charges</h2>
-        <img class="card__img" src="/img/logic_games/electric_charges.png" alt="">
+        <div class="card__preview"></div>
       </a>
 
       <a class="card" href="/apl/logic_games/hitori.html">
         <h2>Hitori</h2>
-        <img class="card__img" src="/img/logic_games/hitori.png" alt="">
+        <div class="card__preview"></div>
       </a>
 
       <a class="card" href="/apl/logic_games/save_the_cow.html">
         <h2>Save the cow</h2>
-        <img class="card__img" src="/img/logic_games/save_the_cow.png" alt="">
+        <div class="card__preview"></div>
       </a>
     </div>
   </main>
+
+  <script>
+    // Tree animation
+    tree = document.querySelectorAll('.card__preview')[0];
+
+    table = document.createElement('table');
+    tbody = document.createElement('tbody');
+    table.appendChild(tbody);
+    tree.appendChild(table);
+
+    [
+      "3 2 2 2 2 2 3 2",
+      "1 0 0 0 0 3 1 0",
+      "1 0 0 3 1 1 1 0",
+      "1 3 2 0 3 0 1 3",
+      "1 1 0 0 2 1 2 1",
+      "1 3 2 2 2 1 0 2",
+      "1 3 2 1 0 3 2 1",
+      "1 2 1 1 3 0 0 2"
+    ].map((item, i) => {
+      const tr = document.createElement('tr');
+      item.split` `.map((x, j) => {
+        const td = document.createElement('td');
+
+        td.style.width = 100 / item.split` `.length + '%';
+        if (x & 1) td.style.borderLeft = "2px solid #000";
+        if (x & 2) td.style.borderTop = "2px solid #000";
+
+        td.addEventListener('click', e => {
+          if (e.offsetX <= 2 && j > 0) {
+            if (td.style.borderLeft === "2px solid rgb(0, 0, 0)") td.style.borderLeft = "1px solid #20202055";
+            else td.style.borderLeft = "2px solid #000";
+          } else if (e.offsetY <= 2 && i > 0) {
+            if (td.style.borderTop === "2px solid rgb(0, 0, 0)") td.style.borderTop = "1px solid #20202055";
+            else td.style.borderTop = "2px solid #000";
+          }
+        });
+
+        td.appendChild(document.createElement('br'));
+        tr.appendChild(td);
+      })
+      tbody.appendChild(tr);
+    });
+
+    // Electric charges animation
+    electric_charges = document.querySelectorAll('.card__preview')[1];
+
+    table = document.createElement('table');
+    tbody = document.createElement('tbody');
+    table.appendChild(tbody);
+    electric_charges.appendChild(table);
+
+    [
+      "-3  9  9  9  0  9 -2 9",
+      " 9  9 -6  9  0  9  0 9",
+      "-4  9  9  9 -3  9 -2 9",
+      " 9 -2 -4 -3  0  9  0 9",
+      " 9  9  9  9  9  9 -4 9",
+      " 9  3  2  2  1  9 -2 9",
+      " 9  9  9  9  9  9 -1 9",
+      "-1  9  1  9  9  2  9 2"
+    ].map(item => {
+      const tr = document.createElement('tr');
+      item.split` `.filter(x => x != '').map(x => {
+        const td = document.createElement('td');
+
+        td.style.width = 100 / item.split` `.length + '%';
+        td.innerText = (x === '9') ? '' : x;
+
+        td.appendChild(document.createElement('br'));
+        tr.appendChild(td);
+      })
+      tbody.appendChild(tr);
+    });
+
+    // Hitoti animation
+    hitori = document.querySelectorAll('.card__preview')[2];
+
+    table = document.createElement('table');
+    tbody = document.createElement('tbody');
+    table.appendChild(tbody);
+    hitori.appendChild(table);
+
+    [
+      '8 7 4 2 4 5 6 3',
+      '4 6 2 6 5 6 6 3',
+      '3 5 4 1 4 4 8 7',
+      '6 8 7 4 1 2 3 5',
+      '5 6 1 8 3 3 7 7',
+      '8 3 8 4 8 8 1 2',
+      '1 6 3 7 2 7 4 4',
+      '7 8 5 3 8 1 2 2'
+    ].map(item => {
+      const tr = document.createElement('tr');
+      item.split` `.map(x => {
+        const td = document.createElement('td');
+
+        td.style.width = 100 / item.split` `.length + '%';
+        td.innerText = x;
+
+        td.appendChild(document.createElement('br'));
+        tr.appendChild(td);
+      })
+      tbody.appendChild(tr);
+    });
+
+    // Save the cow animation
+    save_the_cow = document.querySelectorAll('.card__preview')[3];
+
+    table = document.createElement('table');
+    tbody = document.createElement('tbody');
+    table.appendChild(tbody);
+    save_the_cow.appendChild(table);
+
+    [
+      "0 0 0 0 0 0 0 0 0 1",
+      "0 0 0 0 0 0 0 0 0 0",
+      "0 0 0 0 0 0 0 0 0 1",
+      "0 0 0 1 0 0 1 0 0 0",
+      "0 0 0 1 0 0 0 0 0 0",
+      "0 0 0 0 0 0 0 1 1 0",
+      "1 0 0 0 0 0 1 1 1 0",
+      "1 0 0 1 1 0 0 1 0 0",
+      "0 0 0 1 0 0 0 0 0 0",
+      "0 0 0 0 0 0 0 0 1 0"
+    ].map(item => {
+      const tr = document.createElement('tr');
+      item.split` `.map(x => {
+        const td = document.createElement('td');
+
+        td.style.width = 100 / item.split` `.length + '%';
+        td.innerText = (+x) ? '🐄' : '';
+
+        td.appendChild(document.createElement('br'));
+        tr.appendChild(td);
+      })
+      tbody.appendChild(tr);
+    });
+
+  </script>
 
   <section id="footer"></section>
 </body>
