Puzzle animations Emojy to images Table style

--- a/apl/logic_games/index.html
+++ b/apl/logic_games/index.html
@@ -45,147 +45,263 @@
     </div>
   </main>
 
-  <script>
-    // Tree animation
-    tree = document.querySelectorAll('.card__preview')[0];
+  <section id="footer"></section>
 
+  <script>
+    // Tree table
     table = document.createElement('table');
     tbody = document.createElement('tbody');
     table.appendChild(tbody);
-    tree.appendChild(table);
+    document.querySelectorAll('.card__preview')[0].appendChild(table);
 
     [
-      "3 2 2 2 2 2 3 2",
-      "1 0 0 0 0 3 1 0",
-      "1 0 0 3 1 1 1 0",
-      "1 3 2 0 3 0 1 3",
-      "1 1 0 0 2 1 2 1",
-      "1 3 2 2 2 1 0 2",
-      "1 3 2 1 0 3 2 1",
-      "1 2 1 1 3 0 0 2"
-    ].map((item, i) => {
+      [3, 3, 2, 2, 3, 2, 2, 2, 2],
+      [1, 1, 0, 0, 1, 0, 0, 0, 0],
+      [1, 2, 2, 2, 1, 0, 0, 3, 2],
+      [1, 3, 2, 3, 2, 2, 2, 1, 0],
+      [1, 1, 0, 2, 1, 0, 0, 1, 0],
+      [1, 3, 1, 0, 3, 1, 0, 1, 0],
+      [3, 0, 1, 0, 1, 2, 2, 1, 0],
+      [1, 0, 2, 3, 2, 2, 2, 1, 0],
+      [1, 0, 0, 1, 0, 0, 0, 2, 1]
+    ].map(item => {
       const tr = document.createElement('tr');
-      item.split` `.map((x, j) => {
+      item.map(x => {
         const td = document.createElement('td');
+        if (x & 1) td.style.borderLeft = "1px solid #000";
+        if (x & 2) td.style.borderTop = "1px solid #000";
+        tr.appendChild(td);
+      })
+      tbody.appendChild(tr);
+    });
 
-        td.style.width = 100 / item.split` `.length + '%';
-        if (x & 1) td.style.borderLeft = "2px solid #000";
-        if (x & 2) td.style.borderTop = "2px solid #000";
+    // Tree animation
+    const tree_tds = document.querySelectorAll('.card__preview')[0].querySelectorAll('td');
+    const tree_solution = [
+      [0, [0, 2, 4, 9, 11, 13]],
+      [1, [60]],
+      [0, [48, 50, 51, 52, 57, 59, 61, 68, 69, 70]],
+      [0, [22, 23, 24, 39, 30, 66, 75]],
+      [1, [3, 21]],
+      [0, [12, 20, 29, 31]],
+      [1, [40, 58]],
+      [0, [32, 41, 49, 67, 76, 54, 55, 56, 62]],
+      [1, [77, 79]],
+      [0, [71, 80, 72, 73, 74, 78, 34, 43, 6, 15]],
+      [1, [28, 47]],
+      [0, [37, 38, 19, 18, 27, 36, 46]],
+      [1, [47, 45, 63, 65]],
+      [0, [55, 64, 53]],
+      [1, [44]],
+      [0, [42, 35, 16, 17]],
+      [1, [33]],
+      [0, [25]],
+      [1, [7, 10, 14, 26]],
+    ];
 
-        td.addEventListener('click', e => {
-          if (e.offsetX <= 2 && j > 0) {
-            if (td.style.borderLeft === "2px solid rgb(0, 0, 0)") td.style.borderLeft = "1px solid #20202055";
-            else td.style.borderLeft = "2px solid #000";
-          } else if (e.offsetY <= 2 && i > 0) {
-            if (td.style.borderTop === "2px solid rgb(0, 0, 0)") td.style.borderTop = "1px solid #20202055";
-            else td.style.borderTop = "2px solid #000";
-          }
-        });
+    (async function animateTree() {
+      for (const i in tree_solution) {
+        await new Promise(resolve => setTimeout(resolve, 1000));
+        if (tree_solution[i][0]) tree_solution[i][1].map(pos => tree_tds[pos].style.backgroundImage = 'url("/img/logic_games/tree.png")');
+        else tree_solution[i][1].map(pos => tree_tds[pos].style.backgroundImage = 'url("/img/logic_games/erase.png")');
+      };
 
-        td.appendChild(document.createElement('br'));
+      await new Promise(resolve => setTimeout(resolve, 1000));
+      [...tree_tds].map(td => { if (td.style.backgroundImage === 'url("/img/logic_games/erase.png")') td.style.backgroundImage = '' });
+
+      await new Promise(resolve => setTimeout(resolve, 4000));
+      [...tree_tds].map(td => td.style.backgroundImage = '');
+      animateTree();
+    })();
+
+    // Electric charges table
+    table = document.createElement('table');
+    tbody = document.createElement('tbody');
+    table.appendChild(tbody);
+    document.querySelectorAll('.card__preview')[1].appendChild(table);
+
+    [
+      [-3, 9, 9, 9, 0, 9, -2, 9],
+      [9, 9, -6, 9, 0, 9, 0, 9],
+      [-4, 9, 9, 9, -3, 9, -2, 9],
+      [9, -2, -4, -3, 0, 9, 0, 9],
+      [9, 9, 9, 9, 9, 9, -4, 9],
+      [9, 3, 2, 2, 1, 9, -2, 9],
+      [9, 9, 9, 9, 9, 9, -1, 9],
+      [-1, 9, 1, 9, 9, 2, 9, 2]
+    ].map(item => {
+      const tr = document.createElement('tr');
+      item.map(x => {
+        const td = document.createElement('td');
+        td.innerText = (x === 9) ? '' : x;
+        td.style.backgroundSize = '50%';
         tr.appendChild(td);
       })
       tbody.appendChild(tr);
     });
 
     // Electric charges animation
-    electric_charges = document.querySelectorAll('.card__preview')[1];
+    const electric_charges_tds = document.querySelectorAll('.card__preview')[1].querySelectorAll('td');
+    const electric_charges_solution = [
+      [[-1, [1, 9, 8, 17, 24]], [1, [55, 62]]],
+      [[-1, [45, 47, 53]]],
+      [[1, [52, 60]], [-1, [31, 29]]],
+      [[1, [21, 23]]],
+      [[-1, [13, 11, 19]]],
+      [[1, [3, 5]]],
+      [[-1, [7, 15]], [-1, [2, 18]]],
+      [[1, [51]], [-1, [34]]],
+      [[1, [50, 49]]],
+      [[-1, [48, 57, 59]]],
+      [[1, [32, 33, 40]]],
+      [[-1, [35]]],
+      [[1, [36, 37]], [-1, [39]]],
+    ];
 
+    (async function animateElectricCharges() {
+      for (const list in electric_charges_solution) {
+        await new Promise(resolve => setTimeout(resolve, 1000));
+        for (const i in electric_charges_solution[list]) {
+          if (electric_charges_solution[list][i][0] === 1) electric_charges_solution[list][i][1].map(pos => electric_charges_tds[pos].style.backgroundImage = 'url("/img/logic_games/plus.png")');
+          else if (electric_charges_solution[list][i][0] === -1) electric_charges_solution[list][i][1].map(pos => electric_charges_tds[pos].style.backgroundImage = 'url("/img/logic_games/minus.png")');
+        }
+      };
+
+      await new Promise(resolve => setTimeout(resolve, 11000));
+      [...electric_charges_tds].map(td => td.style.backgroundImage = '');
+      animateElectricCharges();
+    })();
+
+    // Hitoti table
     table = document.createElement('table');
     tbody = document.createElement('tbody');
     table.appendChild(tbody);
-    electric_charges.appendChild(table);
+    document.querySelectorAll('.card__preview')[2].appendChild(table);
 
     [
-      "-3  9  9  9  0  9 -2 9",
-      " 9  9 -6  9  0  9  0 9",
-      "-4  9  9  9 -3  9 -2 9",
-      " 9 -2 -4 -3  0  9  0 9",
-      " 9  9  9  9  9  9 -4 9",
-      " 9  3  2  2  1  9 -2 9",
-      " 9  9  9  9  9  9 -1 9",
-      "-1  9  1  9  9  2  9 2"
+      [8, 7, 4, 2, 4, 5, 6, 3],
+      [4, 6, 2, 6, 5, 6, 6, 3],
+      [3, 5, 4, 1, 4, 4, 8, 7],
+      [6, 8, 7, 4, 1, 2, 3, 5],
+      [5, 6, 1, 8, 3, 3, 7, 7],
+      [8, 3, 8, 4, 8, 8, 1, 2],
+      [1, 6, 3, 7, 2, 7, 4, 4],
+      [7, 8, 5, 3, 8, 1, 2, 2]
     ].map(item => {
       const tr = document.createElement('tr');
-      item.split` `.filter(x => x != '').map(x => {
+      item.map(x => {
         const td = document.createElement('td');
-
-        td.style.width = 100 / item.split` `.length + '%';
-        td.innerText = (x === '9') ? '' : x;
-
-        td.appendChild(document.createElement('br'));
+        td.innerText = x;
         tr.appendChild(td);
       })
       tbody.appendChild(tr);
     });
 
-    // Hitoti animation
-    hitori = document.querySelectorAll('.card__preview')[2];
+    // Hitori animation
+    const hitori_tds = document.querySelectorAll('.card__preview')[2].querySelectorAll('td');
+    const hitori_solution = [
+      [[], [5, 12, 3, 1, 10, 8, 16, 17, 19, 22, 24, 26, 28, 29, 30, 31, 32, 35, 41, 46, 48, 50, 52, 56, 58, 59, 61]],
+      [[11, 9, 18, 42, 40], [0, 2, 34, 43]],
+      [[14, 4, 21, 44, 39, 63, 57], [55, 62, 49, 36, 45, 20, 6, 13, 15, 25, 60, 47]],
+      [[33, 27, 7, 37, 54], [23, 38, 53]],
+      [[51], []],
+    ];
 
+    (async function animateHitori() {
+      for (const i in hitori_solution) {
+        await new Promise(resolve => setTimeout(resolve, 1000));
+        hitori_solution[i][0].map(pos => {
+          hitori_tds[pos].style.color = '#fff';
+          hitori_tds[pos].style.backgroundColor = '#4169e1';
+          hitori_tds[pos].style.opacity = 0.5;
+        });
+        await new Promise(resolve => setTimeout(resolve, 1000));
+        hitori_solution[i][1].map(pos => {
+          hitori_tds[pos].style.color = '#fff';
+          hitori_tds[pos].style.backgroundColor = '#ba55d3';
+          hitori_tds[pos].style.opacity = 0.5;
+        });
+      };
+
+      await new Promise(resolve => setTimeout(resolve, 1000));
+      [...hitori_tds].map(td => {
+        if (td.style.backgroundColor !== 'rgb(65, 105, 225)') {
+          td.style.color = '';
+          td.style.backgroundColor = '';
+          td.style.opacity = 1;
+        }
+      });
+
+      await new Promise(resolve => setTimeout(resolve, 13000));
+      [...hitori_tds].map(td => {
+        td.style.color = '';
+        td.style.backgroundColor = '';
+        td.style.opacity = 1;
+      });
+      animateHitori();
+    })();
+
+    // Save the cow table
     table = document.createElement('table');
     tbody = document.createElement('tbody');
     table.appendChild(tbody);
-    hitori.appendChild(table);
+    document.querySelectorAll('.card__preview')[3].appendChild(table);
 
     [
-      '8 7 4 2 4 5 6 3',
-      '4 6 2 6 5 6 6 3',
-      '3 5 4 1 4 4 8 7',
-      '6 8 7 4 1 2 3 5',
-      '5 6 1 8 3 3 7 7',
-      '8 3 8 4 8 8 1 2',
-      '1 6 3 7 2 7 4 4',
-      '7 8 5 3 8 1 2 2'
+      [0, 0, 0, 0, 0, 0, 0, 0, 0, 1],
+      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+      [0, 0, 0, 0, 0, 0, 0, 0, 0, 1],
+      [0, 0, 0, 1, 0, 0, 1, 0, 0, 0],
+      [0, 0, 0, 1, 0, 0, 0, 0, 0, 0],
+      [0, 0, 0, 0, 0, 0, 0, 1, 1, 0],
+      [1, 0, 0, 0, 0, 0, 1, 1, 1, 0],
+      [1, 0, 0, 1, 1, 0, 0, 1, 0, 0],
+      [0, 0, 0, 1, 0, 0, 0, 0, 0, 0],
+      [0, 0, 0, 0, 0, 0, 0, 0, 1, 0]
     ].map(item => {
       const tr = document.createElement('tr');
-      item.split` `.map(x => {
+      item.map(x => {
         const td = document.createElement('td');
-
-        td.style.width = 100 / item.split` `.length + '%';
-        td.innerText = x;
-
-        td.appendChild(document.createElement('br'));
+        td.style.backgroundImage = (+x) ? 'url("/img/logic_games/cow.png")' : '';
         tr.appendChild(td);
       })
       tbody.appendChild(tr);
     });
 
     // Save the cow animation
-    save_the_cow = document.querySelectorAll('.card__preview')[3];
+    const save_the_cow_tds = document.querySelectorAll('.card__preview')[3].querySelectorAll('td');
+    const save_the_cow_solution = [
+      [[67, 68], [67, 77]],
+      [[4, 14, 24, 34], [40, 41, 42, 43]],
+      [[8, 18], [28, 29]],
+      [[28, 38], [44, 45, 46, 47]],
+      [[], [48, 49]],
+      [[43, 53, 63], [70, 71, 72]],
+      [[73, 83, 93], []],
+      [[48, 58], [68, 69]],
+      [[56, 46], [66]],
+      [[66], [73, 74, 75]],
+      [[], [76]],
+      [[78], [88, 89]],
+      [[74], [83]],
+      [[85, 95], [84]],
+      [[75], []],
+      [[88, 98], []],
+    ];
 
-    table = document.createElement('table');
-    tbody = document.createElement('tbody');
-    table.appendChild(tbody);
-    save_the_cow.appendChild(table);
+    (async function animateTree() {
+      for (const i in save_the_cow_solution) {
+        await new Promise(resolve => setTimeout(resolve, 1000));
+        save_the_cow_solution[i][0].map(pos => save_the_cow_tds[pos].style.borderLeft = '1px solid #000');
+        save_the_cow_solution[i][1].map(pos => save_the_cow_tds[pos].style.borderTop = '1px solid #000');
+      };
 
-    [
-      "0 0 0 0 0 0 0 0 0 1",
-      "0 0 0 0 0 0 0 0 0 0",
-      "0 0 0 0 0 0 0 0 0 1",
-      "0 0 0 1 0 0 1 0 0 0",
-      "0 0 0 1 0 0 0 0 0 0",
-      "0 0 0 0 0 0 0 1 1 0",
-      "1 0 0 0 0 0 1 1 1 0",
-      "1 0 0 1 1 0 0 1 0 0",
-      "0 0 0 1 0 0 0 0 0 0",
-      "0 0 0 0 0 0 0 0 1 0"
-    ].map(item => {
-      const tr = document.createElement('tr');
-      item.split` `.map(x => {
-        const td = document.createElement('td');
-
-        td.style.width = 100 / item.split` `.length + '%';
-        td.innerText = (+x) ? '🐄' : '';
-
-        td.appendChild(document.createElement('br'));
-        tr.appendChild(td);
-      })
-      tbody.appendChild(tr);
-    });
+      await new Promise(resolve => setTimeout(resolve, 8000));
+      [...save_the_cow_tds].map(td => td.style.border = '1px dashed #20202050');
+      animateTree();
+    })();
 
   </script>
-
-  <section id="footer"></section>
 </body>
 
 </html>
